<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JiuJiuChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_word">》欢迎使用《 </string>
    <string name="username">用户名</string>
    <string name="password">密码 </string>
    <string name="login">登陆 </string>
    <string name="login_tip">没有账号？点我   </string>
    <string name="login_register_link">注册 </string>
</resources>
